Format PDF: In progress

--- a/FormatPDF/src/org/freeinternals/format/pdf/Descriptions.properties
+++ b/FormatPDF/src/org/freeinternals/format/pdf/Descriptions.properties
@@ -1,1 +1,3 @@
 PDF_FILE_HEADER=The first line of a PDF file shall be a header consisting of the 5 characters %PDF\u2013 followed by a version number of the form 1.N, where N is a digit between 0 and 7.
+PDF_INDIRECT_OBJECT=Any object in a PDF file may be labelled as an indirect object. This gives the object a unique object identifier by which other objects can refer to it (for example, as an element of an array or as the value of a dictionary entry).
+PDF_CROSS_REFERENCE_TABLE=The cross-reference table contains information that permits random access to indirect objects within the file so that the entire file need not be read to locate any particular object.
