--- a/FormatCLASS/nbproject/project.properties
+++ b/FormatCLASS/nbproject/project.properties
@@ -46,8 +46,7 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}
+    ${build.classes.dir}
 javadoc.overview=${basedir}\\src\\overview.html
 javadoc.doctitle=Java Class File Library, Version 2.0<br>API Specification
 javadoc.header=<b>Java Class File Library</b><br>version 2.0
